<resources>
    <string name="app_name">When Free</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="main_title">HOMEWORK</string>
    <string name="erkek_text">Erkek</string>
    <string name="disi_text">Dişi</string>
    <string name="password_hint">Password</string>
    <string name="login_buttonTitle">BOO!</string>
    <string name="school_buttonTitle">SCHOOL</string>
    <string name="social_buttonTitle">SOCIAL</string>
    <string name="todo_buttonTitle">TO-DO</string>
    <string name="overall_buttonTitle">OVERALL</string>
    <string name="add_item">ADD</string>
    <string name="label_actionBar">HOMEWORK</string>
    <string name="todo_label_radiobutton">TO-DO</string>
    <string name="title_hintText">Todo\'s Title</string>
    <string name="delete_action">DELETE</string>
    <string name="save_action">SAVE</string>
    <string name="cancel_action">CANCEL</string>
    <string name="pick_date">Pick Date</string>
    <string name="wrong_pass">Yanlış şifre.Lütfen tekrar deneyiniz.</string>
</resources>
