<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/girisEkrani_relativeLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#40a1f6"
        android:text="@string/school_buttonTitle"
        android:id="@+id/school_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:onClick="buttonClicked"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#40a1f6"
        android:text="@string/social_buttonTitle"
        android:id="@+id/social_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:onClick="buttonClicked"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#40a1f6"
        android:text="@string/todo_buttonTitle"
        android:id="@+id/todo_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:onClick="buttonClicked"/>

</RelativeLayout>