<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">


            <Button
                android:id="@+id/school_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40a1f6"
                android:text="@string/school_buttonTitle"
                android:textColor="#ffffff" />


            <Button
                android:id="@+id/social_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40a1f6"
                android:text="@string/social_buttonTitle"
                android:textColor="#ffffff" />


            <Button
                android:id="@+id/todo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#40a1f6"
                android:text="@string/todo_buttonTitle"
                android:textColor="#ffffff" />

        </LinearLayout>

        <Button
            android:id="@+id/overall_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="#40a1f6"
            android:text="@string/overall_buttonTitle"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>